# viscom_framework_enh

./: CMakeLists.txt  CMake_enh.cmake
resources/shader/: bilateral_blur.glsl  gaussian_blur.glsl
src/: ApplicationNodeBase.cpp  ApplicationNodeBase.h
src/core/: AdditionalInfoContainer.cpp  AdditionalInfoContainer.h  CSVTableExporter.cpp  CSVTableExporter.h  SelfRegister.h  SelfRegisterFactory.h  owned_ptr.h  serialization_helper.cpp  serialization_helper.h  type_traits.h
src/enh/: ApplicationNodeBase.cpp  ApplicationNodeBase.h
src/enh/gfx/animation/: AnimationManager.cpp  OrbitAnimation.cpp  RotationAnimation.cpp  WayPointAnimation.cpp
src/enh/gfx/env/: EnvironmentMapRenderer.h
src/enh/gfx/gl/: GLBuffer.h  GLTexture.cpp  GLTexture.h  GLUniformBuffer.cpp  GLUniformBuffer.h  GLVertexAttributeArray.cpp  GLVertexAttributeArray.h  OpenGLRAIIWrapper.h  ShaderBufferObject.cpp  ShaderBufferObject.h
src/enh/gfx/mesh/: SimpleMeshRenderer.cpp
src/enh/gfx/postprocessing/: DepthOfField.cpp
src/gfx/: PickHandler.cpp
src/gfx/animation/: AnimationManager.cpp  AnimationManager.h  BaseAnimation.cpp  BaseAnimation.h  OrbitAnimation.cpp  OrbitAnimation.h  RotationAnimation.cpp  RotationAnimation.h  WayPointAnimation.cpp  WayPointAnimation.h
src/gfx/env/: EnvironmentMapRenderer.cpp
src/gfx/gl/: GLBuffer.cpp  GLBuffer.h  GLTexture.cpp  GLUniformBuffer.h  GLVertexAttributeArray.h  OpenGLRAIIWrapper.h  ShaderBufferObject.cpp  ShaderBufferObject.h
src/gfx/mesh/: SimpleMeshRenderer.cpp  SimpleMeshRenderer.h
src/gfx/postprocessing/: BloomEffect.cpp  DepthOfField.cpp  FilmicTMOperator.cpp
src/gui/: FileDialog.cpp  FileDialog.h
